<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<android.support.constraint.ConstraintLayout


    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">



    <ImageView
        android:id="@+id/iv_movieImage"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_margin="4dp"
        android:src="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_margin="12dp"
        android:id="@+id/trailer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_movieImage"
       />



    <TextView
        android:id="@+id/tv_movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/trailer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"

       />

    <TextView
        android:id="@+id/tv_movieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="24dp"
       android:padding="8dp"
        android:text="bo7a"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/tv_movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/trailer_container" />

    <RatingBar
        android:id="@+id/movie_rate_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_margin="12dp"
        android:padding="8dp"
        android:numStars="10"
        android:rating="8.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movieTitle" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_rate_bar" />

    <TextView
        android:id="@+id/tv_movieDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"

        android:padding="8dp"
        android:text="2015"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/movie_rate_bar" />

    <TextView
        android:id="@+id/tv_movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/overview"
        android:padding="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_movieOverView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:textSize="15dp"
        android:padding="5dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_margin="12dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_rate_bar"
        app:layout_constraintTop_toBottomOf="@+id/tv_movieName" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:textSize="25sp"
       android:text="@string/reviews"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movieOverView" />

    <FrameLayout
        android:id="@+id/review_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviews" />

</android.support.constraint.ConstraintLayout>
</ScrollView>